hphp/test/zend/bad/ext/spl/tests/SplFixedArray__construct_param_string.php
<?php

$array = new SplFixedArray( "string" );

?>